<resources>
    <string name="app_name">Sherlock</string>
    <string name="somebodys_location">Somebody\'s location</string>
    <string name="register_title">Register to Sherlock</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="go_login"><u>HAVE ACCOUNT? LOG IN</u></string>
    <string name="login">Log in</string>
    <string name="login_title">Login to Sherlock</string>
    <string name="go_register"><u>DON\'T HAVE ACCOUNT? REGISTER</u></string>
    <string name="location_sharing">Location sharing</string>
    <string name="share_location">Share location</string>
    <string name="stop_sharing">Stop sharing</string>
    <string name="observe_location">Observe location</string>
    <string name="add_friend">Add Friend</string>
    <string name="scan">Scan</string>
    <string name="qr_code">QR code</string>
    <string name="observe_title">Active Friends</string>
    <string name="friend_title">Add Friend</string>
    <string name="share_title">Share location</string>
</resources>